Closed Bug 565463 Opened 14 years ago Closed 14 years ago

AutoValueVector OOM misreporting in jsiter.cpp

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a5

People

(Reporter: Waldo, Assigned: Waldo)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

!vec.append(...) where vec is AutoValueVector means vec internally uses ContextAllocPolicy, so when a failure happens it's reported.  Reporting an error atop that is wrong.
Can you whip up a quick patch?
Attached patch PatchSplinter Review
Oh hey, a couple failures to report error as well, wicked!
Attachment #445001 - Flags: review?(jorendorff)
Attachment #445001 - Flags: review?(jorendorff) → review+
http://hg.mozilla.org/tracemonkey/rev/abeb114181d5
Whiteboard: fixed-in-tracemonkey
Target Milestone: --- → mozilla1.9.3a5
http://hg.mozilla.org/mozilla-central/rev/abeb114181d5
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: