Bug 565463 - Error-reporting mistakes with new-style Auto* classes.  r=jorendorff